task-2/mightybyte-api/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mightybyte-api-prod
  labels:
    app: mightybyte-api-prod
    build_id: "**REPLACE WITH BUILD ID**"
spec:
  type: NodePort
  selector:
    app: mightybyte-api-prod
  ports:
    - protocol: TCP
      port: 8080
  sessionAffinity: None
